language_tests/source_files/valid/borrow_member_via_deref_mut_ref.tr
struct Boxed {
    value: int32
}

func poke(_ b: &mut Boxed) {
    var r = b
    unsafe { (&mut (*r).value as *mut int32).write(7) }
}

func main() {
    var b = Boxed { value: 1 }
    poke(&mut b)
    if b.value == 7 {
        std.print("ok\n")
    }
}
